git-annex (3.20111232) UNRELEASED; urgency=low

  * Added annex-web-options configuration settings, which can be
    used to provide parameters to whichever of wget or curl git-annex uses
    (depends on which is available, but most of their important options
    suitable for use here are the same).

 -- Joey Hess <joeyh@debian.org>  Mon, 02 Jan 2012 14:19:19 -0400

git-annex (3.20111231) unstable; urgency=low

  * sync: Improved to work well without a central bare repository.
    Thanks to Joachim Breitner.
  * Rather than manually committing, pushing, pulling, merging, and git annex
    merging, we encourage you to give "git annex sync" a try.
  * sync --fast: Selects some of the remotes with the lowest annex.cost
    and syncs those, in addition to any specified at the command line.
  * Union merge now finds the least expensive way to represent the merge.
  * reinject: Add a sanity check for using an annexed file as the source file.
  * Properly handle multiline git config values.
  * Fix the hook special remote, which bitrotted a while ago.
  * map: --fast disables use of dot to display map
  * Test suite improvements. Current top-level test coverage: 75%
  * Improve deletion of files from rsync special remotes. Closes: #652849
  * Add --include, which is the same as --not --exclude.
  * Format strings can be specified using the new --format option, to control
    what is output by git annex find.
  * Support git annex find --json
  * Fixed behavior when multiple insteadOf configs are provided for the
    same url base.
  * Can now be built with older git versions (before 1.7.7); the resulting
    binary should only be used with old git.
  * Updated to build with monad-control 0.3.

 -- Joey Hess <joeyh@debian.org>  Sat, 31 Dec 2011 14:55:29 -0400

git-annex (3.20111211) unstable; urgency=medium

  * Fix bug in last version in getting contents from bare repositories.
  * Ensure that git-annex branch changes are merged into git-annex's index,