@@ -4,6 +4,10 @@ git-annex (3.20111232) UNRELEASED; urgency=low
     used to provide parameters to whichever of wget or curl git-annex uses
     (depends on which is available, but most of their important options
     suitable for use here are the same).
+  * Dotfiles, and files inside dotdirs are not added by "git annex add"
+    unless the dotfile or directory is explicitly listed. So "git annex add ."
+    will add all untracked files in the current directory except for those in
+    dotdirs.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 02 Jan 2012 14:19:19 -0400
 
